--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,11 @@
 
 # BlueJ files
 *.ctxt
+*.iml
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
+.idea/
 
 # Package Files #
 *.jar
@@ -22,3 +24,4 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
